--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+header {
+  background: #1e65ff;
+  padding: 10px;
+}
+header h1 {
+  color: white;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+h2 {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+.content {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 100px;
+}
+.btn {
+  margin: 5px;
+  padding: 10px;
+  background: yellow;
+  font-weight: bolder;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
